# koka

./: .dockerignore  .gitignore  .gitmodules  .hlint.yaml  default.kk  defaults.kk  graph.dot  koka.cabal  linear.kk  no_default.kk  no_defaults.kk  nonlinear.kk  out.txt  package.yaml  pubspec.yaml  readme.md  stack.yaml
.github/: Dockerfile
.github/workflows/: build.yml  bundle.yaml  publish.yaml
analysis/test/: fib.kk  random.kk  tail-rec.kk
doc/: dev-learnings.kk.md
doc/spec/: spec.kk.md  tour.kk.md
kklib/include/: kklib.h
kklib/js_runtime/: index.html  index.mjs  samples_web_basic.wasm
kklib/src/: all.c  bytes.c  init.c  os.c  string.c  wasm.c  wasm_alloc.c
lib/: toc.kk
lib/llhttp/: inline.c  llhttp-capi.kk  llhttp.kk
lib/std/: async.kk  core.kk  test.kk
lib/sys/: dom.kk
lib/uv/: error.kk  event-loop.kk  file.kk  fs-event.kk  generated.kk  net.kk  poll.kk  signal.kk  stream.kk  timer.kk  tty.kk  utils.kk
lib/web/: wasm-inline.c  wasm.kk
samples/: all.kk  testparse.kk
samples/async/: file-basic.kk  fs-event.kk  llhttp.kk  mbedtls.kk  net-async.kk  net-echo.kk  signal.kk  timer.kk  tty.kk
samples/basic/: caesar.kk  debug-string.kk  debug.kk  generated.kk  list.kk  map.kk  sort.cpp  sort.kk  test.hs  unicode.kk
samples/c/: interop-c.h  interop.kk
samples/dom/: conway.kk
samples/handlers/: ambient.kk  ask.kk  basic.kk  nim.kk  optimize.kk  parser.kk  peek.kk  react.kk  scoped.kk  shallow.kk  show_nested.kk  typeclass_advanced.kk  typeclass_show.kk  typeclass_show_basic.kk  typeclass_show_generic.kk  unix.kk
samples/implicits/: datatypes-a-la-carte.kk  monad-interpreter.kk
samples/json/: json-parser.kk  json.kk  (+1 more)
src/: Main.hs
test/: Spec.hs
test/perf/linear_effs/: CMakeLists.txt  linear_1.kk  linear_2_poly.kk  nonlinear_1.kk  nonlinear_2_poly.kk
util/: alex.sh  bundle.kk  install.bat  install.sh  minbuild.sh  release.md  reversion.kk  update-unicode.kk
(+1036 files in other folders)
